2009-10-09  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-jump): Add new `display-func' parameter.
	(bookmark-jump-other-window): Just invoke bookmark-jump with new
	argument now, so the two function's behaviors will match.  (Bug#3645)

2009-10-08  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/proj.el (project-make-dist, project-compile-project):
	Fix filename test.
	(ede-proj-dist-makefile): Use expand-file-name instead of concat
	to expand file names.

2009-10-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-file-name-real-user, tramp-file-name-domain)
	(tramp-file-name-real-host, tramp-file-name-port): Apply
	`save-match-data.

	* net/tramp-smb.el (tramp-smb-handle-copy-directory): Handle the
	case both directories are remote.
	(tramp-smb-handle-expand-file-name): Implement "~" expansion.
	(tramp-smb-maybe-open-connection): Flush the cache only if
	necessary.

2009-10-08  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/ede/proj-obj.el (ede-gcc-linker): New var.
	(ede-proj-target-makefile-objectcode): Use it.

	* cedet/ede/source.el (ede-want-any-source-files-p)
	(ede-want-any-auxiliary-files-p, ede-want-any-files-p): Return
	search result.  This error was introduced while merging.

2009-10-07  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (WINS_UPDATES): Fix typo in previous change.

2009-10-07  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/autoload.el (batch-update-autoloads): Remove useless use of
	concat.

2009-10-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files-x.el (read-file-local-variable): Include some
	non-user-variables in the completion table (bug#4664).

2009-10-07  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-flush-connection-property): Add trace
	message.

	* net/tramp-smb.el (tramp-smb-errors): Add error messages.
	(tramp-smb-file-name-handler-alist): Add handler for
	`copy-directory', `expand-file-name', `set-file-modes'.
	(tramp-smb-handle-copy-directory)